tests/cases/fail/list_float_method_arg_type.p4
def main() -> None:
    xs: list[float] = [1.0]
    xs.append(True)
